--- a/styles.css
+++ b/styles.css
@@ -115,4 +115,9 @@ body {
 .social-link:hover {
   color: #0077b5; /* Change color on hover */
 }
+  text-decoration: none;
+
+}
+.social-link:hover {
+  color: #0077b5; 
 }
